Bug 474474 - KMyMoney crashes when filling in scheduled transaction
Summary: KMyMoney crashes when filling in scheduled transaction
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: macOS (DMG) macOS
: NOR crash
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-09-13 07:06 UTC by David Naylor
Modified: 2023-09-14 06:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
macOS crash report (122.38 KB, text/plain)
2023-09-13 07:06 UTC, David Naylor
Details

Note You need to log in before you can comment on or make changes to this bug.
Description David Naylor 2023-09-13 07:06:52 UTC
Created attachment 161596 [details]
macOS crash report

STEPS TO REPRODUCE
1. Find a transaction in the "Ledger"
2. Right click and select "Create scheduled transaction..."
3. Select a transaction from the "Select autofill transaction" dialog and click "OK"

OBSERVED RESULT
KMyMoney crashes

EXPECTED RESULT
The dialog for creating a scheduled transaction appears

SOFTWARE/OS VERSIONS
macOS: 13.5

ADDITIONAL INFORMATION
KMyMoney nightly (5.1.80-5d4ad1deb) was used (the stable version didn't show any content under home, due to an issue with QWebEngine).  

The new schedule dialog does appear clicking the "New Schedule..." button on the "Scheduled transactions" page, or when selecting "Cancel" on the "Select autofill transaction" dialog.  Thus, it is likely the autofilling that is causing the crash.
Comment 1 Thomas Baumgart 2023-09-14 06:32:27 UTC
Git commit 0488ba96d453c0943257b56cc0983726eebe5d1b by Thomas Baumgart.
Committed on 14/09/2023 at 08:28.
Pushed by tbaumgart into branch 'master'.

Prevent triggering autofill while loading scheduled transaction
FIXED-IN: 5.2

M  +5    -1    kmymoney/views/newtransactioneditor.cpp

https://invent.kde.org/office/kmymoney/-/commit/0488ba96d453c0943257b56cc0983726eebe5d1b