Prevent triggering autofill while loading scheduled transaction

BUG: 474474
FIXED-IN: 5.2